# api-analytics

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  fastapi_test.py  flask_test.py  json.js  json.json  test.js
.github/workflows/: main.yml
analytics/: analytics.py  core.py  fastapi.py  flask.py  test.py
analytics/fastapi/: .gitignore  pyproject.toml  setup.py
analytics/go/: analytics.go  go.mod  go.sum  main.go
analytics/jvm/: .gitignore  README.md  build.gradle.kts  settings.gradle
analytics/nodejs/: .npmignore  README.md  analytics.js  package.json
analytics/python/: .gitignore  README.md  pyproject.toml
analytics/python/fastapi/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
analytics/python/fastapi/api_analytics/: core.py  fastapi.py
analytics/python/fastapi/example/: app.py  fastapi.py  fastapi_ex.py
analytics/python/fastapi/test/: fastapi_ex.py
analytics/python/fastapi/tests/: fastapi_test.py  test.py
analytics/python/fastapi/tests/integration/: app.py
analytics/python/python/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
analytics/python/python/api_analytics/: aiohttp.py  core.py  django.py  falcon.py  fastapi.py  flask.py  sanic.py  starlette.py  tornado.py
analytics/python/python/example/: flask.py  tempCodeRunnerFile.py  tornado.py  tornado_ex.py
analytics/python/python/example/aiohttp/: app.py
analytics/python/python/example/django/HelloWorld/: urls.py
analytics/python/python/example/falcon/: app.py
analytics/python/python/example/fastapi/: app.py
analytics/python/python/example/flask/: app.py
analytics/python/python/example/sanic/: app.py
analytics/python/python/example/starlette/: app.py
analytics/python/python/scripts/: package_copy.py
analytics/python/python/test/: flask_ex.py  tornado_ex.py
analytics/python/python/test/django/HelloWorld/: views.py
analytics/python/python/tests/: conftest.py  fastapi_ex.py  fastapi_test.py  flask_test.py  recordings.py  test_aiohttp.py  test_django.py  test_falcon.py  test_fastapi.py  test_flask.py  test_sanic.py  test_starlette.py  test_tornado.py  utils.py
analytics/python/python/tests/django/: db.sqlite3
analytics/python/python/tests/integration/aiohttp/: app.py
analytics/python/python/tests/integration/django/: manage.py
analytics/python/python/tests/integration/django/HelloWorld/: apps.py  views.py
analytics/python/python/tests/integration/falcon/: app.py
analytics/python/python/tests/integration/fastapi/: app.py
analytics/python/python/tests/integration/flask/: app.py
analytics/python/python/tests/integration/sanic/: app.py
analytics/python/python/tests/integration/starlette/: app.py
analytics/python/python/tests/integration/tornado/: app.py
analytics/python/tornado/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
analytics/python/tornado/api_analytics/: core.py  tornado.py
analytics/python/tornado/example/: app.py
analytics/python/tornado/test/: tornado_ex.py
analytics/python/tornado/tests/: conftest.py  test.py  tornado_ex.py
analytics/python/tornado/tests/integration/: app.py
analytics/rust/actix/analytics/: Cargo.toml  README.md
analytics/rust/actix/analytics/src/: analytics.rs
analytics/rust/analytics/: Cargo.toml  README.md
analytics/rust/analytics/src/: analytics.rs
analytics/rust/axum/analytics/: Cargo.toml  README.md
analytics/rust/axum/analytics/src/: analytics.rs
analytics/rust/axum/example/: Cargo.toml
analytics/rust/axum/example/src/: analytics.rs  main.rs
analytics/rust/axum/test/: .gitignore  Cargo.toml
analytics/rust/axum/test/src/: main.rs
analytics/rust/axum/tests/: Cargo.toml
analytics/rust/axum/tests/src/: analytics.rs  main.rs
analytics/rust/example/: Cargo.toml
analytics/rust/example/src/: analytics.rs  main.rs
analytics/rust/rocket/analytics/: Cargo.toml  README.md
analytics/rust/rocket/analytics/src/: analytics.rs
analytics/rust/rocket/example/: Cargo.toml
analytics/rust/rocket/example/src/: main.rs
backend/analytics/: analytics.py  test.py
backend/api/: go.mod  go.sum  index.go  vercel.json
backend/server/: README.md  go.mod  go.sum  main.go
dashboard/: .eslintrc  .gitignore  .prettierignore  .prettierrc  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  rollup.config.js  server.js  svelte.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
dashboard-kit/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dashboard-kit/src/: app.css  app.d.ts
dashboard/public/: App.js  bundle.css  bundle.css.map  bundle.js  bundle.js.map  global.css  prism.css  prism.js
dashboard/src/: App.svelte  app.css  app.d.ts  app.html  demo.ts  global.d.ts  hooks.server.ts  main.ts
gotest/: go.mod  go.sum  main.go
monitor/: go.mod  go.sum  main.go
server/: .gitignore  README.md  go.mod  go.sum  go.work  go.work.sum  main.go  vercel.json  vercel_test.json
server/api/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  helper.go  index.go  main.go
server/database/: database.go  database_test.go  go.mod  go.sum  pgx_database.go  query.go  query_test.go  sanitize.go  sanitize_test.go
server/email/: email.go  email_test.go  go.mod
server/lib/: database.go  maintenance.go  migrate.go  routes.go
server/logger/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
server/monitor/: .gitignore  Dockerfile  Makefile  README.md  crontab  go.mod  go.sum  main.go
server/notifications/: go.mod  go.sum  main.go
server/proxy/: go.mod
server/self-hosting/: .env  .env.dev  .env.example  .env.prod  .gitignore  README.md  docker-compose.dev.yml  docker-compose.traefik-dev-example.yml  docker-compose.traefik-prod-example.yml  docker-compose.yml  test.sh
server/tools/: README.md
tools/backup/: backup.go  go.mod  go.sum  restore.go
tools/maintenance/: backup.go  go.mod  go.sum  maintenance.go
tools/migrate/: go.mod  go.sum  main.go  migrate.go
tools/stats/: go.mod  go.sum  (+1 more)
(+636 files in other folders)
