[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "fastapi-analytics"
authors = [{name = "Tom Draper", email = "tomjdraper1@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = ["fastapi", "requests"]
description = "Monitoring and analytics for FastAPI applications."
keywords = ["analytics", "api", "dashboard", "fastapi", "middleware"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.11"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/tom-draper/api-analytics"