[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
name = "api-analytics"
authors = [{name = "Tom Draper", email = "tomjdraper1@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = ["Django", "fastapi", "Flask", "tornado", "requests"]
description = "Monitoring and analytics for Python API frameworks."
keywords = ["analytics", "api", "dashboard", "django", "fastapi", "flask", "tornado", "middleware"]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
version = "1.0.15"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/tom-draper/api-analytics"