[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
authors = [{name = "Tom Draper", email = "tomjdraper1@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = ["requests"]
description = "Monitoring and analytics for Python API frameworks."
keywords = ["analytics", "api", "dashboard", "django", "fastapi", "flask", "tornado", "middleware"]
license = {file = "LICENSE"}
name = "api-analytics"
readme = "README.md"
requires-python = ">=3.6"
version = "1.2.3"

[project.optional-dependencies]
django = ["Django"]
fastapi = ["fastapi"]
flask = ["Flask"]
tornado = ["tornado"]
build = ["build", "twine"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/tom-draper/api-analytics"
