[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[project]
authors = [{name = "Tom Draper", email = "tomjdraper1@gmail.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = ["tornado", "requests"]
description = "Monitoring and analytics for Tornado applications."
keywords = ["analytics", "api", "dashboard", "tornado", "middleware"]
license = {file = "LICENSE"}
name = "tornado-analytics"
readme = "README.md"
requires-python = ">=3.6"
version = "1.2.3"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["pytest"]

[project.urls]
repository = "https://github.com/tom-draper/api-analytics"
