[package]
name = "actix-analytics"
version = "1.0.1"
edition = "2021"
description= "Monitoring and analytics for Actix web applications."
license = "MIT"
keywords = ["api", "analytics", "actix" , "dashboard", "middleware"]
categories = ["api-analytics", "middleware", "server-analytics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/analytics.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.


[dependencies]
actix-web = "4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }