[package]
categories = ["web-programming", "visualization"]
description = "Monitoring and analytics for Actix web applications."
edition = "2021"
keywords = ["api", "analytics", "actix", "dashboard", "middleware"]
license = "MIT"
name = "actix-analytics"
repository = "https://github.com/tom-draper/api-analytics"
version = "1.0.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"] # The crate types to generate. 
path = "src/analytics.rs" # The source file of the target.

[dependencies]
actix-web = "4"
futures = "0.3"
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
