[package]
categories = ["web-programming", "visualization"]
description = "Monitoring and analytics for Actix web applications."
edition = "2021"
keywords = ["api", "analytics", "actix", "dashboard", "middleware"]
license = "MIT"
name = "actix-analytics"
repository = "https://github.com/tom-draper/api-analytics"
version = "1.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"] # The crate types to generate.      
path = "src/analytics.rs" # The source file of the target.

[dependencies]
actix-rt = "2.8.0"
actix-web = "4"
chrono = {version = "0.4", features = ["unstable-locales"]}
futures = "0.3"
lazy_static = "1.4.0"
reqwest = {version = "0.11", default-features = false, features = ["json"]}
serde = {version = "1.0", features = ["derive"]}

[features]
default = ["native-tls"]

native-tls = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
