[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
dotenv = "0.15.0"
axum-analytics = "1.0.0"
