[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
http = "0.2.8"
tower = "0.4.13"