[package]
categories = ["web-programming", "visualization"]
description = "Monitoring and analytics for Rocket web applications."
edition = "2021"
keywords = ["api", "analytics", "rocket", "dashboard", "middleware"]
license = "MIT"
name = "rocket-analytics"
repository = "https://github.com/tom-draper/api-analytics"
version = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"] # The crate types to generate.           
path = "src/analytics.rs" # The source file of the target.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["unstable-locales"]}
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
rocket = { version = "0.5", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
