[package]
edition = "2021"
name = "example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
rocket-analytics = "1.0"
serde = {version = "1.0", features = ["derive"]}

